Add semantic params to configs

--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -26,6 +26,9 @@ MODEL:
     MASKING_RADIUS: 16
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
+  SEMANTIC:
+    CROSS_ATTN_SCA: False # False/before/after
+    EMBED_DIM: 768
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
