--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -27,8 +27,9 @@ MODEL:
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
   SEMANTIC:
-    CROSS_ATTN_SCA: False # False/before/after
-    EMBED_DIM: 768
+    CROSS_ATTN_SCA: None # None/before/after
+    EMBED_DIM: 512
+    NUM_HEADS: 12
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
