Add freeze backbone init

--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -28,8 +28,9 @@ MODEL:
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
   SEMANTIC:
     CROSS_ATTN_SCA: None # None/before/after
-    EMBED_DIM: 512
-    NUM_HEADS: 12
+    EMBED_DIM: 137
+    NUM_HEADS: 8
+    FREEZE_BACKBONE: True
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
