--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -28,6 +28,7 @@ MODEL:
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
   SEMANTIC:
     CROSS_ATTN_SCA: before # None/before/after
+    DUAL_CROSS_ATTN_SCA: False # True/False
     EMBED_DIM: 137
     NUM_HEADS: 8
     FREEZE_BACKBONE: True
