--- a/configs/spai_dual_before_sca.yaml
+++ b/configs/spai_dual_before_sca.yaml
@@ -27,8 +27,8 @@ MODEL:
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
   SEMANTIC:
-    CROSS_ATTN_SCA: None # None/before/after
-    DUAL_CROSS_ATTN_SCA: False # True/False
+    CROSS_ATTN_SCA: before # None/before/after
+    DUAL_CROSS_ATTN_SCA: True # True/False
     EMBED_DIM: 512
     NUM_HEADS: 8
     FREEZE_BACKBONE: True
