--- a/configs/convnext_spai_dual_before_sca.yaml
+++ b/configs/convnext_spai_dual_before_sca.yaml
@@ -32,7 +32,7 @@ MODEL:
     EMBED_DIM: 512
     NUM_HEADS: 8
     FREEZE_BACKBONE: True
-    SEMANTIC_ENCODER: "clip"
+    SEMANTIC_ENCODER: "convnext"
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
