--- a/configs/convnext_spai_dual_after_sca.yaml
+++ b/configs/convnext_spai_dual_after_sca.yaml
@@ -27,12 +27,12 @@ MODEL:
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
   SEMANTIC:
-    CROSS_ATTN_SCA: before # None/before/after
+    CROSS_ATTN_SCA: after # None/before/after
     DUAL_CROSS_ATTN_SCA: True # True/False
     EMBED_DIM: 512
     NUM_HEADS: 8
     FREEZE_BACKBONE: True
-    SEMANTIC_ENCODER: "clip"
+    SEMANTIC_ENCODER: "convnext"
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
