--- a/configs/spai_after_sca.yaml
+++ b/configs/spai_after_sca.yaml
@@ -32,6 +32,7 @@ MODEL:
     EMBED_DIM: 512
     NUM_HEADS: 8
     FREEZE_BACKBONE: True
+    SEMANTIC_ENCODER: "clip"
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
