--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -26,6 +26,10 @@ MODEL:
     MASKING_RADIUS: 16
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
+    SEMANTIC_DIM: 512
+    NUM_HEADS: 8
+    EARLY_FUSION_LAYERS: [3, 6]
+    DROPOUT: 0.5
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
@@ -39,7 +43,7 @@ DATA:
 AUG:
   COLOR_JITTER: 0.
 TRAIN:
-  EPOCHS: 35
+  EPOCHS: 10
   WARMUP_EPOCHS: 5
   BASE_LR: 5e-4
   WARMUP_LR: 2.5e-7
