Something that runs- patch level fusion

--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -26,12 +26,15 @@ MODEL:
     MASKING_RADIUS: 16
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
-    SEMANTIC_DIM: 512
+    SEMANTIC_DIM: 768
     NUM_HEADS: 8
     EARLY_FUSION_LAYERS: [3, 6]
     DROPOUT: 0.5
+    ATTN_DROPOUT: 0.1
+    FUSION_DIM: 1024
   CLS_HEAD:
     MLP_RATIO: 3
+    
   PATCH_VIT:
     MINIMUM_PATCHES: 4
 DATA:
