--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -48,14 +48,15 @@ AUG:
 TRAIN:
   EPOCHS: 10
   WARMUP_EPOCHS: 5
-  BASE_LR: 5e-4
+  BASE_LR: 0.00001
   WARMUP_LR: 2.5e-7
   MIN_LR: 2.5e-7
   WEIGHT_DECAY: 0.05
   LAYER_DECAY: 0.8
-  CLIP_GRAD: None
+  CLIP_GRAD: 1.0
   LOSS: "bce"
 TEST:
   ORIGINAL_RESOLUTION: True
 PRINT_FREQ: 100
 SAVE_FREQ: 10
+AMP_OPT_LEVEL: O1
