--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -18,45 +18,63 @@ MODEL:
     USE_MEAN_POOLING: True
     USE_INTERMEDIATE_LAYERS: True
     PROJECTION_DIM: 1024
-    PROJECTION_LAYERS: 2
+    PROJECTION_LAYERS: 3
     PATCH_PROJECTION: True
     PATCH_PROJECTION_PER_FEATURE: True
     INTERMEDIATE_LAYERS: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
+    PATCH_POOLING: "mean"
   FRE:
-    MASKING_RADIUS: 16
-    PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
+    MASKING_RADIUS: 20
+    PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: "gelu"
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
+    DISABLE_RECONSTRUCTION_SIMILARITY: False
     SEMANTIC_DIM: 768
     NUM_HEADS: 8
-    EARLY_FUSION_LAYERS: [3, 6]
-    DROPOUT: 0.5
+    EARLY_FUSION_LAYERS: [2, 4, 6, 8]
+    DROPOUT: 0.3
     ATTN_DROPOUT: 0.1
     FUSION_DIM: 1024
+    NUM_FREQUENCY_BANDS: 5
+    USE_LAYER_NORM: True
+    FFN_RATIO: 4
   CLS_HEAD:
     MLP_RATIO: 3
     
   PATCH_VIT:
     MINIMUM_PATCHES: 4
+    PATCH_STRIDE: 112
+    NUM_HEADS: 12
+    ATTN_EMBED_DIM: 1536
+    CLS_VECTOR_DIM: 1096
+
 DATA:
   DATASET: csv_sid
   IMG_SIZE: 224
   NUM_WORKERS: 8
   AUGMENTED_VIEWS: 4
   TEST_PREFETCH_FACTOR: 1
+
 AUG:
-  COLOR_JITTER: 0.
+  COLOR_JITTER: 0.2
+  JPEG_COMPRESSION_PROB: 0.7
+  JPEG_MIN_QUALITY: 30
+  WEBP_COMPRESSION_PROB: 0.3
+
 TRAIN:
-  EPOCHS: 10
-  WARMUP_EPOCHS: 5
-  BASE_LR: 0.00001
-  WARMUP_LR: 2.5e-7
-  MIN_LR: 2.5e-7
-  WEIGHT_DECAY: 0.05
-  LAYER_DECAY: 0.8
+  EPOCHS: 20
+  WARMUP_EPOCHS: 3
+  BASE_LR: 0.00005
+  WARMUP_LR: 5.0e-7
+  MIN_LR: 5.0e-7
+  WEIGHT_DECAY: 0.03
+  LAYER_DECAY: 0.85
   CLIP_GRAD: 1.0
   LOSS: "bce"
+
 TEST:
   ORIGINAL_RESOLUTION: True
+  VIEWS_REDUCTION_APPROACH: "max"
+
 PRINT_FREQ: 100
-SAVE_FREQ: 10
+SAVE_FREQ: 5
 AMP_OPT_LEVEL: O1
