triple fusion with gates

--- a/configs/spai.yaml
+++ b/configs/spai.yaml
@@ -13,6 +13,7 @@ MODEL:
     OUTPUT_DIM: 1096
     HIDDEN_DIMS: [1024, 512]
     DROPOUT: 0.5
+    SPAI_INPUT_SIZE: [224, 224]
   VIT:
     EMBED_DIM: 768
     DEPTH: 12
