--- a/configs/spai_test_compatible.yaml
+++ b/configs/spai_test_compatible.yaml
@@ -7,7 +7,7 @@ MODEL:
   REQUIRED_NORMALIZATION: "positive_0_1"
   RESOLUTION_MODE: "arbitrary"
   FEATURE_EXTRACTION_BATCH: 400
-  SID_DROPOUT: 0.3
+  SID_DROPOUT: 0.5
   VIT:
     EMBED_DIM: 768
     DEPTH: 12
@@ -18,7 +18,7 @@ MODEL:
     USE_SHARED_RPB: False
     USE_MEAN_POOLING: True
     USE_INTERMEDIATE_LAYERS: True
-    PROJECTION_DIM: 768
+    PROJECTION_DIM: 1024
     PROJECTION_LAYERS: 2
     PATCH_PROJECTION: True
     PATCH_PROJECTION_PER_FEATURE: True
@@ -30,18 +30,15 @@ MODEL:
     DISABLE_RECONSTRUCTION_SIMILARITY: False
     SEMANTIC_DIM: 512
     NUM_HEADS: 8
-    EARLY_FUSION_LAYERS: [2, 4, 6, 8]
-    USE_FREQUENCY_AWARE_ATTENTION: True
-    USE_ADAPTIVE_GATING: True
-    USE_HIERARCHICAL_FUSION: True
-    DROPOUT: 0.3
+    EARLY_FUSION_LAYERS: [3, 6]
+    DROPOUT: 0.5
   CLS_HEAD:
     MLP_RATIO: 3
   PATCH_VIT:
     MINIMUM_PATCHES: 4
-    ATTN_EMBED_DIM: 768
+    ATTN_EMBED_DIM: 1536
     NUM_HEADS: 12
-    PATCH_STRIDE: 112
+    PATCH_STRIDE: 224
 MODEL_WEIGHTS: "clip"
 DATA:
   DATASET: csv_sid
@@ -49,28 +46,23 @@ DATA:
   NUM_WORKERS: 8
   AUGMENTED_VIEWS: 4
   VAL_BATCH_SIZE: 128
-  TEST_PREFETCH_FACTOR: 2
+  TEST_PREFETCH_FACTOR: 4
 AUG:
-  COLOR_JITTER: 0.1
-  MIXUP: 0.2
-  CUTMIX: 0.3
+  COLOR_JITTER: 0.0
+  MIXUP: 0.8
+  CUTMIX: 1.0
 TRAIN:
   MODE: "supervised"
-  EPOCHS: 15
-  WARMUP_EPOCHS: 3
-  BASE_LR: 3e-4
-  WARMUP_LR: 1e-7
-  MIN_LR: 1e-7
-  WEIGHT_DECAY: 0.03
-  LAYER_DECAY: 0.85
-  CLIP_GRAD: 1.0
-  LOSS: "focal"
-  FOCAL_ALPHA: 0.25
-  FOCAL_GAMMA: 2.0
-  SCALE_LR: True
+  EPOCHS: 10
+  WARMUP_EPOCHS: 5
+  BASE_LR: 5e-4
+  WARMUP_LR: 2.5e-7
+  MIN_LR: 2.5e-7
+  WEIGHT_DECAY: 0.05
+  LAYER_DECAY: 0.8
+  LOSS: "bce"
+  SCALE_LR: False
   ACCUMULATION_STEPS: 1
-  SEMANTIC_CONSISTENCY_WEIGHT: 0.1
-  FREQUENCY_CONSISTENCY_WEIGHT: 0.05
   OPTIMIZER:
     NAME: "adamw"
   LR_SCHEDULER:
@@ -79,5 +71,5 @@ TEST:
   ORIGINAL_RESOLUTION: True
   VIEWS_REDUCTION_APPROACH: "mean"
   EXPORT_IMAGE_PATCHES: False
-PRINT_FREQ: 50
-SAVE_FREQ: 5
+PRINT_FREQ: 100
+SAVE_FREQ: 10 
