Resolve configs (semantic_context/semantic_cross_attn)

--- a/configs/clip_spai_dual_after_sca.yaml
+++ b/configs/clip_spai_dual_after_sca.yaml
@@ -26,7 +26,7 @@ MODEL:
     MASKING_RADIUS: 16
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
-  SEMANTIC:
+  SEMANTIC_CROSS_ATTN:
     CROSS_ATTN_SCA: after # None/before/after
     DUAL_CROSS_ATTN_SCA: True # True/False
     EMBED_DIM: 512
