--- a/configs/convnext_spai_before_sca.yaml
+++ b/configs/convnext_spai_before_sca.yaml
@@ -26,7 +26,7 @@ MODEL:
     MASKING_RADIUS: 16
     PROJECTOR_LAST_LAYER_ACTIVATION_TYPE: None
     ORIGINAL_IMAGE_FEATURES_BRANCH: True
-  SEMANTIC:
+  SEMANTIC_CROSS_ATTN:
     CROSS_ATTN_SCA: before # None/before/after
     DUAL_CROSS_ATTN_SCA: False # True/False
     EMBED_DIM: 512
