--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.out
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -137,3 +139,7 @@ weights
 .DS_Store
 output/
 pretrains/
+
+# My additions
+data/
+outputs/
